--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
     <section id="about" class="about-section">
         <div class="about-container">
             <h2 class="section-title">About Ambarista</h2>
-            <p class="about-text">Ambarista adalah coffee shop premium yang menyajikan kopi berkualitas tinggi dengan bahan-bahan pilihan terbaik. Setiap cangkir kopi kami dibuat dengan passion dan dedikasi untuk memberikan pengalaman terbaik bagi Anda.</p>
+            <p class="about-text">Coffeshop paling enak udah ini. jelas jelas dibuat sama mas amba, lu kgk usah ragu beli. harga nya juga pelajar banget gak bikin dompet lu kering. soal rasa udah pasti enak di lidah lu, udah intinya mah beli!</p>
             <div class="about-features">
                 <div class="feature-box">
                     <div class="feature-icon">
@@ -152,3 +152,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
