aduh mana bener lagi

--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
                 <h2>Promo Spesial</h2>
             </div>
             <div class="modal-body">
-                <p>Promo gaada 😭</p>
+                <p>Promonya gaada buat uprak aja jual rugi :v</p>
             </div>
             <div class="modal-footer">
                 <button class="modal-btn" onclick="closePromoModal()">Yaelah</button>
@@ -149,7 +149,8 @@
         </div>
     </div>
 
+    <!-- UAParser.js Library for Device Detection -->
+    <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@1/src/ua-parser.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
-
