--- a/public/index.html
+++ b/public/index.html
@@ -141,10 +141,10 @@
                 <h2>Promo Spesial</h2>
             </div>
             <div class="modal-body">
-                <p>Promonya gaada buat uprak aja jual rugi :v</p>
+                <p>Promo gaada cuy. buat uprak aja jual rugi :v</p>
             </div>
             <div class="modal-footer">
-                <button class="modal-btn" onclick="closePromoModal()">Yaelah</button>
+                <button class="modal-btn" onclick="sendPelitMessage()">Yaelah</button>
             </div>
         </div>
     </div>
