--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                     <p class="product-variant">With Milk</p>
                     <div class="product-footer">
                         <span class="product-price">Rp 8K</span>
-                        <button class="btn-buy" onclick="window.location.href='https://wa.me/628988329323?text=pi%20aku%20mau%20mesen%20kopi%20nyaaa'">→</button>
+                        <button class="btn-buy" onclick="window.location.href='https://wa.me/628988329323?text=p%20mau%20kopi%20nya%20pi'">→</button>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     <p class="product-variant">Creamy & Green</p>
                     <div class="product-footer">
                         <span class="product-price">Rp 7K</span>
-                        <button class="btn-buy" onclick="window.location.href='https://wa.me/628988329323?text=pi%20aku%20mau%20mesen%20matchaaa'">→</button>
+                        <button class="btn-buy" onclick="window.location.href='https://wa.me/628988329323?text=p%20mau%20matcha%20nya%20pi'">→</button>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                 <p>Promo gaada cuy. buat uprak aja jual rugi :v</p>
             </div>
             <div class="modal-footer">
-                <button class="modal-btn" onclick="sendPelitMessage()">Yaelah</button>
+                <button class="modal-btn" onclick="window.location.href='https://wa.me/628988329323?text=pelit%20banget%20gak%20ada%20promo'">Yaelah</button>
             </div>
         </div>
     </div>
@@ -154,3 +154,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
